Ordenamiento y Columnas terminado

--- a/DataFrame/DataFrame/DataFrame.vcxproj
+++ b/DataFrame/DataFrame/DataFrame.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BusquedayOrdenamiento.hpp" />
     <ClInclude Include="DataFrame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
