--- a/DataFrame/DataFrame/DataFrame.vcxproj.filters
+++ b/DataFrame/DataFrame/DataFrame.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="DataFrame.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="BusquedayOrdenamiento.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
