--- a/DataFrame/DataFrame/DataFrame.vcxproj.filters
+++ b/DataFrame/DataFrame/DataFrame.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="BusquedayOrdenamiento.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Menu.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
