--- a/DataFrame/DataFrame/DataFrame.vcxproj
+++ b/DataFrame/DataFrame/DataFrame.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClInclude Include="BusquedayOrdenamiento.hpp" />
     <ClInclude Include="DataFrame.h" />
+    <ClInclude Include="Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
