--- a/DataFrame/DataFrame/DataFrame.vcxproj
+++ b/DataFrame/DataFrame/DataFrame.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{E3258804-69D8-40FE-A01E-95FF5141372A}</ProjectGuid>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>DataFrame</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -44,7 +45,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
